fix(modal/popover): fix scrollbar overlay

--- a/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
+++ b/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
@@ -29,13 +29,14 @@
       position: fixed;
       top: 0;
       left: 0;
-      overflow-y: scroll;
+      overflow-y: auto;
 
       .backdrop {
         position: fixed;
         top: 0;
         left: 0;
         z-index: -1;
+        pointer-events: none;
       }
 
       .popup {
